Fix alignment of working hours section using HTML table

--- a/styles/style.css
+++ b/styles/style.css
@@ -307,6 +307,15 @@ span {
   width: 100px;
 }
 
+/* for working hours table */
+.working-hours-table {
+  margin: 10px;
+}
+
+.working-hours-table td {
+  padding: 2px 7px 7px 2px;
+}
+
 /* collapsing transition class */
 .collapsing {
   transition: 1s;
